# llm-wikidata-grounding

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_setup.py
docs/: HOW_IT_WORKS.md
examples/: basic_example.py
src/: __init__.py  hybrid_pipeline.py  ollama_classifier.py  reranker.py  wikidata_api.py
src/legacy/: README.md  nli_classifier.py  pipeline.py
static/: style.css
templates/: index.html
tests/: conftest.py  test_hybrid_pipeline.py  test_ollama_classifier.py  test_reranker.py  test_wikidata_api.py
